sma css fyrir sidebar

--- a/src/App.scss
+++ b/src/App.scss
@@ -23,3 +23,13 @@ html { /* stylelint-disable-line */
 img { /* stylelint-disable-line */
   max-width: 100%;
 }
+
+h3 {
+  background: green;
+  color: yellow;
+}
+
+a {
+  background: green;
+  color: yellow;
+}
