--- a/src/App.scss
+++ b/src/App.scss
@@ -14,22 +14,18 @@
 html { /* stylelint-disable-line */
   box-sizing: border-box;
   overflow-x: hidden;
-  overflow-y: scroll;x
-
+  overflow-y: scroll;
+  height: 100%;
   font-family: $font-main;
   font-size: 16px;
 }
 
+body {
+  min-height: 100%;
+  position: relative;
+  padding-bottom: 6.5%;
+}
+
 img { /* stylelint-disable-line */
   max-width: 100%;
-}
-
-h3 {
-  background: green;
-  color: yellow;
-}
-
-a {
-  background: green;
-  color: yellow;
 }
