--- a/src/components/footer/Footer.scss
+++ b/src/components/footer/Footer.scss
@@ -1,1 +1,16 @@
 @import "../../config.scss";
+
+.footer {
+  position: fixed;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  height: 6.5%;
+  width: 100vw;
+  background: #ededed;
+  color: #aaaaaa;
+  text-align: center;
+  font-family: $font-footer;
+  font-size: 0.8rem;
+  line-height: 1.8rem;
+}
