css fyrir nyjar nidurstodur

--- a/src/components/signin/SignIn.scss
+++ b/src/components/signin/SignIn.scss
@@ -37,7 +37,7 @@
     padding: 6px 12px;
     font-size: 0.9rem;
     line-height: 2rem;
-    color: #b4b4b8;
+    color: #cbcbd2;
     border: 1px solid #cbcbd2;
     border-radius: 4px;
     -webkit-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
