--- a/src/components/bloodtest/bloodtest.scss
+++ b/src/components/bloodtest/bloodtest.scss
@@ -64,12 +64,18 @@
   &__element {
     width: $gutter * 4;
   }
+
+  &__content {
+    width: 100%;
+  }
 }
 
 .testResults {
   max-width: 600px;
   width: 100%;
   border-top: 1px solid #d4d4d4;
+  margin-top: $gutter * 2;
+  margin-left: $gutter * 3;
 
   &__day {
     font-family: $font-footer;
@@ -116,4 +122,84 @@
     display: flex;
     flex-direction: row;
   }
+}
+
+.newTest {
+  max-width: 600px;
+  width: 100%;
+  margin-top: $gutter * 2;
+  margin-left: $gutter * 3;
+
+  &__input {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    justify-content: space-between;
+  }
+
+  &__label {
+    display: flex;
+    flex-direction: column;
+    width: $gutter * 4;
+    font-family: $font-footer;
+    font-size: 0.9rem;
+    align-items: flex-start;
+    justify-content: center;
+  }
+
+  &__result {
+    display: flex;
+    flex-direction: column;
+    width: $gutter * 20;
+    align-items: flex-end;
+  }
+
+  input {
+    display: block;
+    margin-top: $gutter / 2;
+    padding: 6px 12px;
+    font-size: 0.9rem;
+    line-height: 2rem;
+    color: #b4b4b8;
+    border: 1px solid #cbcbd2;
+    border-radius: 4px;
+    -webkit-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+    -o-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+    transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+  }
+
+  input:focus {
+    outline: none;
+    border-color: $accent;
+  }
+
+  &__buttons {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+  }
+
+  &__button {
+    display: flex;
+    flex-direction: column;
+    margin-top: $gutter;
+    margin-left: $gutter;
+    padding: 6px 12px;
+    font-family: $font-footer;
+    font-size: 1rem;
+    font-weight: 200;
+    line-height: 2rem;
+    color: $color-sidebar;
+    background-color: $accent;
+    border-radius: 4px;
+    border: none;
+  }
+
+  &__button:hover {
+    cursor: pointer;
+  }
+}
+
+.cancel {
+  background: #ce6161;
 }
