--- a/src/components/post/Post.scss
+++ b/src/components/post/Post.scss
@@ -18,7 +18,7 @@
   display: flex;
   flex-direction: row-reverse;
   justify-content: flex-end;
-  margin-top: 40px;
+  margin-top: $gutter;
   font-family: $font-footer;
 
   &__post {
@@ -66,7 +66,6 @@
   &__comments--single {
     border-bottom: 1px solid #ededed;
     padding: 20px;
-    //padding-bottom: 10px;
     margin-bottom: 2px;
   }
 }
