--- a/src/components/sidebar/Sidebar.scss
+++ b/src/components/sidebar/Sidebar.scss
@@ -4,10 +4,12 @@
   display: flex;
   flex-direction: column;
   min-height: 100vh;
-  width: 20%;
-  min-width: 250px;
+  // width: 20%;
+  min-width: 310px;
+  // width: 290px;
   margin-left: -8px;
   margin-top: -8px;
+  // padding-right: 8px;
   background: $accent;
   font-family: $font-heading;
 
