--- a/src/components/bloodtest/bloodtest.scss
+++ b/src/components/bloodtest/bloodtest.scss
@@ -1,4 +1,4 @@
-@import "../../config.scss";
+@import '../../config.scss';
 
 .bloodwrapper {
   width: 100%;
@@ -15,7 +15,7 @@
   color: #292929;
 }
 
-.results { 
+.results {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -41,7 +41,7 @@
     line-height: 2rem;
     background-image: none;
     border-radius: 4px;
-    border: 1px solid $accent; 
+    border: 1px solid $accent;
   }
 }
 
@@ -82,11 +82,13 @@
     border-bottom: 1px solid #eeeeee;
     display: flex;
     flex-direction: column;
-
+    &__data--danger {
+      color: red;
+    }
     &__test {
       font-weight: 300;
     }
-    
+
     &__content {
       display: flex;
       flex-direction: row;
@@ -112,7 +114,7 @@
     font-weight: 700;
   }
 
-  &__day ul { 
+  &__day ul {
     display: flex;
     flex-direction: column;
     list-style: none;
@@ -163,9 +165,10 @@
     color: #b4b4b8;
     border: 1px solid #cbcbd2;
     border-radius: 4px;
-    -webkit-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
-    -o-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
-    transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+    -webkit-transition: border-color ease-in-out 0.15s,
+      box-shadow ease-in-out 0.15s;
+    -o-transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
+    transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
   }
 
   input:focus {
