--- a/src/components/wall/Wall.scss
+++ b/src/components/wall/Wall.scss
@@ -3,5 +3,47 @@
 .question {
   display: flex;
   flex-direction: column;
-  width: 100%;
+  width: 640px;
+  margin-bottom: 10%;
+  margin-top: $gutter * 1.5;
+  font-family: $font-footer;
+
+  &__question {
+    margin-left: $gutter * 2;
+  }
+
+  &__submit {
+    display: flex;
+    align-self: flex-start;
+    justify-content: center;
+    width: $gutter * 5;
+    margin-top: $gutter;
+    margin-left: $gutter * 2;
+    padding: 6px 12px;
+    font-family: $font-footer;
+    font-size: 1rem;
+    font-weight: 200;
+    line-height: 2rem;
+    color: $color-sidebar;
+    background-color: $accent;
+    border-radius: 4px;
+    border: none;
+  }
+
+  &__button {
+    width: 100%;
+  }
+}
+
+.submitQuestion {
+  margin-top: 2px;
+  margin-left: $gutter * 2;
+  max-width: 600px;
+  font-family: $font-footer;
+  font-size: 1rem;
+  padding: $gutter / 2 0;
+  border: 1px solid #c7c7c7;
+  outline: none;
+  resize: none;
+  overflow: none;
 }
